# automated-qa-demo

./: .gitignore  AGENTS.md  README.md
.github/workflows/: qa.yml
agents/: README.md  _ci.py  _client.py  api_qa_agent.py  fetch_artifacts.py  runs.py  ui_qa_agent.py
artifacts/9be959bb78804f96ae96c3e61fe1a647/: qa-report.md
artifacts/9be959bb78804f96ae96c3e61fe1a647/generated_specs/: checkout-backpack.spec.ts  checkout-locked-out.spec.ts
artifacts/9be959bb78804f96ae96c3e61fe1a647/recordings/: checkout-backpack.rrweb.json
automations/: README.md  build_prompt.py
docs/: from-the-customer.md
scenarios/01_api_pr_update/: README.md  pyproject.toml
scenarios/01_api_pr_update/pr/: PR_DESCRIPTION.md  add-region-and-max-results.patch
scenarios/01_api_pr_update/service/: app.py
scenarios/01_api_pr_update/service/tests/: conftest.py  test_channels.py  test_playlists.py  test_search.py  test_videos.py
scenarios/02_api_new_generation/: README.md
scenarios/02_api_new_generation/pr/: PR_DESCRIPTION.md  add-playlists-endpoint.patch
scenarios/03_ui_workflow/: README.md  package-lock.json  package.json  playwright.config.ts  workflow.md
scenarios/03_ui_workflow/generated_specs/: cart-badge.spec.ts  checkout-backpack.spec.ts
skills/: README.md
skills/api-qa-conventions/: SKILL.md
skills/front-end-testing/: NOTICE.md
skills/webapp-testing/: NOTICE.md
