[project]
name = "scenario-01-youtube-wrapper"
version = "0.1.0"
description = "Scenario 1: YouTube Data API wrapper service for the automated QA demo."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["service"]

[tool.pytest.ini_options]
testpaths = ["service/tests"]
addopts = "-ra -q"
